Revert this code because Oracle JDK behaves different from OpenJDK